--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "groq-sdk": "^0.26.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "mammoth": "^1.9.1",
     "next-themes": "^0.3.0",
+    "pdfjs-dist": "^5.3.93",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
