--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://brokenllama.github.io/research-rift-finder",
+  "homepage": "https://brokenllama.github.io/scholarmate",
   "private": true,
   "version": "0.0.0",
   "type": "module",
